k8s/example-service-http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service-http
  template:
    metadata:
      labels:
        app: example-service-http
    spec:
      containers:
        - name: example-service-http
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
