k8s/example-service-http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service-http
spec:
  selector:
    app: example-service-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
