k8s/example-service-http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-service-http
spec:
  ingressClassName: nginx
  rules:
    - host: "prj-1774114057528737192.84.201.145.23.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service-http
                port:
                  number: 80
